# paddleocr-helpers

./: pyproject.toml
src/paddleocr_ppocr/data/: __init__.py
src/paddleocr_ppocr/data/imaug/: copy_paste.py  ct_process.py  drrg_targets.py  fce_aug.py  label_ops.py  pg_process.py
src/paddleocr_ppocr/losses/: det_pse_loss.py  e2e_pg_loss.py  vqa_token_layoutlm_loss.py
src/paddleocr_ppocr/metrics/: ct_metric.py  e2e_metric.py  table_metric.py
src/paddleocr_ppocr/modeling/architectures/: base_model.py  distillation_model.py
src/paddleocr_ppocr/modeling/heads/: det_db_head.py  (+6 more)
src/paddleocr_ppocr/postprocess/: east_postprocess.py  fce_postprocess.py  pg_postprocess.py  sast_postprocess.py  vqa_token_ser_layoutlm_postprocess.py
src/paddleocr_ppocr/utils/: network.py  save_load.py
src/paddleocr_ppstructure/: predict_system.py
src/paddleocr_ppstructure/kie/: predict_kie_token_ser.py  predict_kie_token_ser_re.py
src/paddleocr_ppstructure/layout/: predict_layout.py
src/paddleocr_ppstructure/pdf2word/: pdf2word.py
src/paddleocr_ppstructure/recovery/: recovery_to_doc.py
src/paddleocr_ppstructure/table/: eval_table.py  matcher.py  predict_structure.py  predict_table.py
src/paddleocr_tools/: eval.py  export_center.py  export_model.py  infer_cls.py  infer_det.py  infer_e2e.py  infer_kie.py  infer_kie_token_ser.py  infer_kie_token_ser_re.py  infer_rec.py  infer_sr.py  infer_table.py  program.py  test_hubserving.py  train.py
src/paddleocr_tools/infer/: predict_cls.py  predict_det.py  predict_e2e.py  predict_rec.py  predict_sr.py  predict_system.py  utility.py
(+9 files in other folders)
